--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
   </head>
   <body>
   <title>danielfisilva</title>
-  
+  <h1>"Hello, Code School!"</h1>
+  <ul>
+    <li>HTM</li>
+    <li>CSS</li>
+    <li>JavaScript</li>
+  </ul>
   </body>
 </html>
